--- a/client/public/stylesheets/index.css
+++ b/client/public/stylesheets/index.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 .App {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', 'Open Sans', sans-serif;
   font-size: 16px;
   height: 100vh;
   width: 100vw;
