--- a/client/public/stylesheets/index.css
+++ b/client/public/stylesheets/index.css
@@ -1,10 +1,11 @@
 html, body {
   height: 100%;
   margin: 0;
+  font-family: 'Roboto', 'Open Sans', sans-serif;
+  font-size: 18px;
 }
 
 .App {
-  font-family: 'Roboto', 'Open Sans', sans-serif;
   font-size: 16px;
   height: 100vh;
   width: 100vw;
